fix layout on mobile and profile page

--- a/src/shared/styles/_layout.scss
+++ b/src/shared/styles/_layout.scss
@@ -4,12 +4,13 @@
 
 body{
   margin: 0;
-  padding: 5px;
-  height: calc(100vh - 10px);
-  
+  height: 100vh;
+
   #mount, .app-container, .swipeable-view {
     height: 100%;
-  }  
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .disabled{
@@ -23,7 +24,8 @@ body{
   flex-flow: column nowrap;
   background: white;
   padding: 10px;
-  
+  height: 100%;
+
   .chat-messages{
     flex-grow: 1;
   }
@@ -31,8 +33,6 @@ body{
   .chat-input-container{
     font-size: 2rem;
     height: 3rem;
-    position: absolute;
-    bottom: 0;
     width: 95%;
     .chat-input{
       width: 85%;
